# libretiles

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml  libretiles_PRD.md
backend/: .env.example  manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/assets/dicts/: sowpods.txt
backend/billing/: admin.py  models.py  services.py  urls.py  views.py
backend/billing/migrations/: 0001_initial.py  0002_precise_usd_balances.py
backend/catalog/: admin.py  gateway_sync.py  models.py  selection.py  serializers.py  urls.py  views.py
backend/catalog/management/commands/: seed_models.py  sync_gateway_models.py
backend/catalog/migrations/: 0001_initial.py  0002_aimodel_gateway_fields.py  0003_aiprompt.py  0004_seed_aiprompts.py
backend/config/: asgi.py  settings.py  urls.py
backend/game/: admin.py  consumers.py  models.py  realtime.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/game/migrations/: 0001_initial.py  0002_multiplayer_chat_and_state.py  0003_gamesession_total_cost_usd.py  0004_gamesession_ai_prompt_alter_move_kind.py
backend/game/templates/admin/game/: dashboard.html
backend/gamecore/: __init__.py  assets.py  board.py  fastdict.py  game.py  rack.py  rules.py  scoring.py  state.py  tiles.py  types.py  variant_store.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_api.py  test_dictionary_validation.py  test_gamecore.py  test_multiplayer_ws.py
docs/: architecture.md
(+53 files in other folders)
